# NDKCourse

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sslyxhz/ndkcourse/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: logger.cpp  logger.h  native-lib.cpp  native_costtime.cpp  native_costtime.h  native_media.cpp  native_media.h  native_operate.cpp  native_operate.h  native_register.cpp  native_register.h  native_threads.cpp  native_threads.h  native_transfer.cpp  native_transfer.h
app/src/main/java/com/sslyxhz/ndkcourse/: JNINeedTestClass.java  MainActivity.java  NativeCostTimeAdapter.java  NativeMediaAdapter.java  NativeOperateAdapter.java  NativeRegisterAdapter.java  NativeThreadsAdapter.java  NativeTransferAdapter.java  RefData.java
app/src/main/java/com/sslyxhz/ndkcourse/test/: NativeCostTimeTester.java  NativeTransferTester.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sslyxhz/ndkcourse/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
